--- a/AiArtDesctop/MainWindow.axaml
+++ b/AiArtDesctop/MainWindow.axaml
@@ -1,9 +1,9 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AiArtDesctop.MainWindow"
-        Title="AiArtDesktop">
-    Welcome to Avalonia!
+        Title="AI Image Generator" Width="800" Height="600">
+    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+        <!-- Button with Click Event -->
+        <Button Name="GenerateImageButton" Content="Generate Image" Click="OnGenerateImageClick"/>
+    </StackPanel>
 </Window>
