Set up basic functionality for generating image from prompt and displaying it to the UI

--- a/AiArtDesctop/MainWindow.axaml
+++ b/AiArtDesctop/MainWindow.axaml
@@ -3,7 +3,8 @@
         x:Class="AiArtDesctop.MainWindow"
         Title="AI Image Generator" Width="800" Height="600">
     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-        <!-- Button with Click Event -->
+        <Image Height="500" Width="500" Name="MainImage"></Image>
         <Button Name="GenerateImageButton" Content="Generate Image" Click="OnGenerateImageClick"/>
+        <TextBox Name="PromptInput"></TextBox>
     </StackPanel>
 </Window>
