Changed requests to changing jsons, added data models for the json requests, added ability to specify seed

--- a/AiArtDesctop/MainWindow.axaml
+++ b/AiArtDesctop/MainWindow.axaml
@@ -3,8 +3,9 @@
         x:Class="AiArtDesctop.MainWindow"
         Title="AI Image Generator" Width="800" Height="600">
     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+        <TextBox Name="txtSeedBox"></TextBox>
         <Image Height="500" Width="500" Name="MainImage"></Image>
         <Button Name="GenerateImageButton" Content="Generate Image" Click="OnGenerateImageClick"/>
-        <TextBox Name="PromptInput"></TextBox>
+        <TextBox Name="txtPromptInput"></TextBox>
     </StackPanel>
 </Window>
