--- a/AiArtDesctop/MainWindow.axaml
+++ b/AiArtDesctop/MainWindow.axaml
@@ -1,11 +1,15 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:global="clr-namespace:"
         x:Class="AiArtDesctop.MainWindow"
-        Title="AI Image Generator" Width="800" Height="600">
+        Title="AI Image Generator" Width="1010" Height="800">
     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
         <TextBox Name="txtSeedBox"></TextBox>
         <TextBox Name="txtSamplingSteps"></TextBox>
-        <Image Height="500" Width="500" Name="MainImage"></Image>
+        <StackPanel  Orientation="Horizontal" Spacing="10">
+            <Image Height="500" Width="500" Name="MainImage"></Image>
+            <global:SketchCanvas Height="500" Width="500"></global:SketchCanvas>
+        </StackPanel>
         <Button Name="GenerateImageButton" Content="Generate Image" Click="OnGenerateImageClick"/>
         <TextBox Name="txtPromptInput"></TextBox>
     </StackPanel>
