--- a/AiArtDesctop/MainWindow.axaml
+++ b/AiArtDesctop/MainWindow.axaml
@@ -15,6 +15,8 @@
             <cc:SketchCanvas Name = "SketchCanvas" Height="500" Width="500"></cc:SketchCanvas>
         </StackPanel>
         <Button Name="GenerateImageButton" Content="Generate Image" Click="OnGenerateImageClick"/>
+        <Button Name="ClearCanvasButton" Content="Clear Canvas" Click="ClearCanvasButton_OnClick"/>
+        <Button Name="UseCurrentImageButton" Content="Use Image" Click="UseCurrentImageButton_OnClick"/>
         <TextBox Name="txtPromptInput"></TextBox>
         <ColorPicker Name="ColorPicker" ColorChanged="OnColorChanged"></ColorPicker>
         <Slider Name="BrushSlider" Maximum="100" Minimum="1" ValueChanged="BrushSlider_OnValueChanged"></Slider>
