--- a/AiArtDesctop/TextToImage.axaml
+++ b/AiArtDesctop/TextToImage.axaml
@@ -4,5 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="AiArtDesctop.TextToImage">
-    Welcome to Avalonia!
+    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+        <StackPanel Orientation="Horizontal" Spacing="10">
+            <Label Width="90">Seed: </Label>
+            <TextBox Name="txtSeedBox" Width="400"></TextBox>
+            <Label Width="90">Steps: </Label>
+            <TextBox Name="txtSamplingSteps" Width="400"></TextBox>
+        </StackPanel>
+        <StackPanel  Orientation="Horizontal" Spacing="10">
+            <Image Height="512" Width="512" Name="MainImage"></Image>
+        </StackPanel>
+        <Button Name="GenerateImageButton" Content="Generate Image" Click="GenerateImageButton_OnClick"/>
+        <Button Name="SaveImage" Content="Save Image" Click="SaveImage_OnClick"/>
+        <TextBox Name="txtPromptInput"></TextBox>
+    </StackPanel>
 </UserControl>
