Added the ability to select models to text gen and realtime windows

--- a/AiArtDesctop/TextToImage.axaml
+++ b/AiArtDesctop/TextToImage.axaml
@@ -18,6 +18,7 @@
             <Button Name="GenerateImageButton" Content="Generate Image" Click="GenerateImageButton_OnClick" Margin="5"/>
             <Button Name="SaveImage" Content="Save Image" Click="SaveImage_OnClick" Margin="5"/>
         </StackPanel>
+        <ComboBox Name="ModelDropDown"></ComboBox>
         <TextBox Name="txtPromptInput"></TextBox>
     </StackPanel>
 </UserControl>
