--- a/AiArtDesctop/RealTime.axaml
+++ b/AiArtDesctop/RealTime.axaml
@@ -19,7 +19,10 @@
             <Button Name="UseCurrentImageButton" Content="Use Image" Click="UseCurrentImageButton_OnClick" Margin="5"/>
             <Button Name="SaveImage" Content="Save Image" Click="SaveImage_OnClick" Margin="5"/>
         </StackPanel>
-        <ComboBox Name="ModelDropDown"></ComboBox>
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+            <Button Name="ChangeModelType" Click="ChangeModelType_OnClick"></Button>
+            <ComboBox Name="ModelDropDown" Margin="10"></ComboBox>
+        </StackPanel>
         <TextBox Name="txtPromptInput"></TextBox>
         <ColorPicker Name="ColorPicker" ColorChanged="OnColorChanged"></ColorPicker>
         <Slider Name="BrushSlider" Maximum="100" Minimum="1" ValueChanged="BrushSlider_OnValueChanged"></Slider>
